solve the card overflow problem

--- a/src/routes/home/Home.styles.scss
+++ b/src/routes/home/Home.styles.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 6rem 0;
+  border-left: 4px solid #f5ba13;
+  border-right: 4px solid #f5ba13;
   //   label {
   //     padding: 2rem;
   //   }
@@ -23,7 +25,7 @@
     opacity: 0.9;
     z-index: 15000;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
 }
 // .hidden-overlay {
